Correct lang mappings - use levenshtein distance to find the closest matching key

--- a/common/src/main/resources/assets/viaversion/data/en_US.properties
+++ b/common/src/main/resources/assets/viaversion/data/en_US.properties
@@ -1523,6 +1523,7 @@ effect.unluck=Bad Luck
 effect.levitation=Levitation
 
 tipped_arrow.effect.empty=Uncraftable Tipped Arrow
+tipped_arrow.effect.water=Tipped Arrow
 tipped_arrow.effect.mundane=Tipped Arrow
 tipped_arrow.effect.thick=Tipped Arrow
 tipped_arrow.effect.awkward=Tipped Arrow
